--- a/capitec-user-service.yaml
+++ b/capitec-user-service.yaml
@@ -66,7 +66,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: thapeloseema/capitec-user-service:frontend-amd64
+          image: thapeloseema/capitec-user-service:frontend-windows-latest
           ports:
             - containerPort: 4200
 ---
@@ -81,7 +81,7 @@ spec:
   ports:
     - port: 80
       targetPort: 4200
-      nodePort: 30004
+      nodePort: 30006
   type: NodePort
 ---
 apiVersion: apps/v1
@@ -106,22 +106,10 @@ spec:
     spec:
       containers:
         - name: capitec-backend-pod
-          image: thapeloseema/capitec-user-service:backend-amd64
+          image: thapeloseema/capitec-user-service:backend-windows-latest
           ports:
             - containerPort: 8080
-          env:
-            - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://capitec-postgres:5432/capitecdb
-            - name: SPRING_DATASOURCE_USERNAME
-              value: admin
-            - name: SPRING_DATASOURCE_PASSWORD
-              value: adminpassword
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 8080
-            initialDelaySeconds: 10
-            periodSeconds: 5
+          
 ---
 apiVersion: v1
 kind: Service
@@ -138,4 +126,4 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 30005
+      nodePort: 30007
